--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -182,6 +182,18 @@ layout: default
                         </li>
                         {% endif %}
 
+                        {% if site.csdn_username %}
+                        <li>
+                            <a target="_blank"
+                               href="https://blog.csdn.net/{{ site.csdn_username }}?viewmode=list">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa  fa-stack-1x fa-inverse">C</i>
+                                    </span>
+                            </a>
+                        </li>
+                        {% endif %}
+
                         {% if site.juejin_username %}
                         <li>
                             <a target="_blank"
